# ACC-Pit-Wall

./: .gitignore  Entrylist_CSV_Guide.md  LICENSE  README.md  entrylist_sample.csv  id_reference.md  index.html  install_openssh.ps1  package-lock.json  package.json  vite.config.ts
src/: App.vue  main.ts  style.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.nowebview.conf.json  tauri.withwebview.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  preset_manager.rs  server_manager.rs  ssh_utils.rs
src/components/: AssistRulesForm.vue  BopForm.vue  ConfigurationForm.vue  EntryDialog.vue  EntryListForm.vue  EventForm.vue  EventRulesForm.vue  FieldDescription.vue  NationalityLabel.vue  PresetManager.vue  SettingsForm.vue
src/components/bop/: BopContainer.vue  BopDataTable.vue  BopEditPanel.vue  BopImportDialog.vue  BopTrackFilter.vue
src/components/deploy/: DeployOpsPanel.vue
src/components/entrylist/: EntryListTableView.vue
src/components/win11/: Win11Card.vue  Win11Input.vue  (+2 more)
src/composables/: useDeployConnection.ts  useDeployOperations.ts
src/data/: mappings.ts
src/i18n/: fieldDescriptions.ts  index.ts  locales.ts  mappings.ts
src/services/: lfmApi.ts
src/types/: bop.ts  configuration.ts  defaults.ts  element-plus.d.ts  global.d.ts  server.ts
src/utils/: configManager.ts  csvParser.ts  driverShortName.ts  lfmBopService.ts  normalizeEntryList.ts  presetManager.ts  serverManager.ts  steamId.ts
src/views/: About.vue  DeployForm.vue  Home.vue  JsonPreview.vue
(+4 files in other folders)
