[package]
name = "acc-pitwall"
version = "1.0.0"
description = "ACC Pitwall — ACC server configuration and deployment"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ssh2 = "0.9"
zip = "2.2"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
home = "0.5"
dirs = "5.0"
chrono = "0.4"
once_cell = "1.19"
reqwest = { version = "0.12", features = ["json"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
